[gd_scene load_steps=4 format=3 uid="uid://bmpvh8k2ru6k2"]

[ext_resource type="Script" path="res://Scripts/item_option.gd" id="1_chtse"]
[ext_resource type="Texture2D" uid="uid://dgamy8qxgrr10" path="res://Textures/Items/Weapons/sword.png" id="1_gnosl"]
[ext_resource type="FontFile" uid="uid://pc8yfe50oeyj" path="res://Font/tenderness.otf" id="2_qcw44"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 50)
offset_right = 180.0
offset_bottom = 50.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_chtse")

[node name="ItemBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0.305882, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ItemBackground"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_gnosl")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_qcw44")
theme_override_font_sizes/font_size = 16
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 135.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_qcw44")
theme_override_font_sizes/font_size = 8
text = "Description goes here. "
horizontal_alignment = 1
autowrap_mode = 3

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 1.0
offset_right = 179.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("2_qcw44")
text = "Level 1"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
